# application/services/custom_services/apigateway/src/apicontroller/sleeptrackdetailsController.ts
@@ -13,15 +13,31 @@ export class sleeptrackdetailsController implements Controller {
     }
 
     private initializeRoutes() {
-        this.router.delete('/sleeptrackdetails/:id', this.GpDelete);
-this.router.get('/sleeptrackdetails/get/search', this.GpSearch);
-this.router.put('/sleeptrackdetails/get/update', this.GpSearchForUpdate);
+        this.router.put('/sleeptrackdetails/get/update', this.GpSearchForUpdate);
+this.router.delete('/sleeptrackdetails/:id', this.GpDelete);
 this.router.put('/sleeptrackdetails', this.GpUpdate);
+this.router.get('/sleeptrackdetails/get/search', this.GpSearch);
+this.router.get('/sleeptrackdetails/:id', this.GpGetNounById);
+this.router.put('/sleeptrackdetails/get/update', this.GpSearchForUpdate);
+this.router.get('/sleeptrackdetails', this.GpGetAllValues);
+this.router.put('/sleeptrackdetails', this.GpUpdate);
+this.router.post('/sleeptrackdetails', this.GpCreate);
 this.router.get('/sleeptrackdetails/:id', this.GpGetNounById);
 this.router.get('/sleeptrackdetails', this.GpGetAllValues);
 this.router.post('/sleeptrackdetails', this.GpCreate);
     }
 
+public GpSearchForUpdate(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpSearchForUpdate');
+        new ApiAdapter().put(Constant.SLEEPTRACKURL + `${req.url}` , req.body)
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/web' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpSearchForUpdate');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
 public GpDelete(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpDelete');
         new ApiAdapter().delete(Constant.SLEEPTRACKURL + `${req.url}` )
@@ -29,6 +45,17 @@ public GpDelete(req: Request, res: Response) {
               req.baseUrl === '/mobile' ? res.send(result) :
               req.baseUrl === '/web' ? res.send(result) : res.send(null)
             new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpDelete');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
+public GpUpdate(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpUpdate');
+        new ApiAdapter().put(Constant.SLEEPTRACKURL + `${req.url}` , req.body)
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/web' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpUpdate');
         }).catch(err => {
             res.send(err);
         });
@@ -44,6 +71,17 @@ public GpSearch(req: Request, res: Response) {
             res.send(err);
         });
     }
+public GpGetNounById(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpGetNounById');
+        new ApiAdapter().get(Constant.SLEEPTRACKURL + `${req.url}` )
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/web' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpGetNounById');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
 public GpSearchForUpdate(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpSearchForUpdate');
         new ApiAdapter().put(Constant.SLEEPTRACKURL + `${req.url}` , req.body)
@@ -55,6 +93,17 @@ public GpSearchForUpdate(req: Request, res: Response) {
             res.send(err);
         });
     }
+public GpGetAllValues(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpGetAllValues');
+        new ApiAdapter().get(Constant.SLEEPTRACKURL + `${req.url}` )
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/web' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpGetAllValues');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
 public GpUpdate(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpUpdate');
         new ApiAdapter().put(Constant.SLEEPTRACKURL + `${req.url}` , req.body)
@@ -62,6 +111,17 @@ public GpUpdate(req: Request, res: Response) {
               req.baseUrl === '/mobile' ? res.send(result) :
               req.baseUrl === '/web' ? res.send(result) : res.send(null)
             new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpUpdate');
+        }).catch(err => {
+            res.send(err);
+        });
+    }
+public GpCreate(req: Request, res: Response) {
+            new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: GpCreate');
+        new ApiAdapter().post(Constant.SLEEPTRACKURL + `${req.url}` , req.body)
+        .then((res: any) => res.response.json()).then(result => {
+              req.baseUrl === '/mobile' ? res.send(result) :
+              req.baseUrl === '/web' ? res.send(result) : res.send(null)
+            new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: GpCreate');
         }).catch(err => {
             res.send(err);
         });
