# application/services/custom_services/sleeptrack/src/controller/sleeptrackdetailsController.ts
@@ -55,6 +55,41 @@ sleeptrackdetails.(req, (response) => {
      res.json(response);
                 new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: ');
     })}
+public (req: Request, res: Response) {
+sleeptrackdetails.(req, (response) => {
+                new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: ');
+     res.status(200);
+     res.json(response);
+                new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: ');
+    })}
+public (req: Request, res: Response) {
+sleeptrackdetails.(req, (response) => {
+                new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: ');
+     res.status(200);
+     res.json(response);
+                new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: ');
+    })}
+public (req: Request, res: Response) {
+sleeptrackdetails.(req, (response) => {
+                new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: ');
+     res.status(200);
+     res.json(response);
+                new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: ');
+    })}
+public (req: Request, res: Response) {
+sleeptrackdetails.(req, (response) => {
+                new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: ');
+     res.status(200);
+     res.json(response);
+                new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: ');
+    })}
+public (req: Request, res: Response) {
+sleeptrackdetails.(req, (response) => {
+                new CustomLogger().showLogger('info', 'Enter into sleeptrackdetailsController.ts: ');
+     res.status(200);
+     res.json(response);
+                new CustomLogger().showLogger('info', 'Exit from sleeptrackdetailsController.ts: ');
+    })}
 
 
 }
