# application/services/custom_services/sleeptrack/src/swagger/swagger.yaml
@@ -13,12 +13,35 @@ info:
       name: Apache 2.0
       url: https://www.apache.org/licenses/LICENSE-2.0.html
 servers:
-   - url: http://localhost:8015
+   - url: http://localhost:8016
+     description: sleeptrack
+   - url: http://localhost:8016
      description: sleeptrack
 tags:
 - name: sleeptrackdetails
+- name: sleeptrackdetails
 paths:
    "/sleeptrackdetails/{id}":
+      delete:
+         tags:
+         -  sleeptrackdetails
+         description: GpDelete
+         parameters:
+         -  in: "path"
+            description: GpDelete
+            name: id
+            required: true
+            schema:
+               type: "string"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
       delete:
          tags:
          -  sleeptrackdetails
@@ -73,7 +96,38 @@ paths:
                description: Not Found
             500:
                description: Internal Server Error
+      get:
+         tags:
+         -  sleeptrackdetails
+         description: GpSearch
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
    "/sleeptrackdetails/get/update":
+      put:
+         tags:
+         -  sleeptrackdetails
+         description: GpSearchForUpdate
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: "#/components/schemas/sleeptrackdetails"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
       put:
          tags:
          -  sleeptrackdetails
@@ -124,6 +178,86 @@ paths:
                description: Not Found
             500:
                description: Internal Server Error
+      put:
+         tags:
+         -  sleeptrackdetails
+         description: GpUpdate
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: "#/components/schemas/sleeptrackdetails"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
+      post:
+         tags:
+         -  sleeptrackdetails
+         description: GpCreate
+         requestBody:
+            content:
+               application/json:
+                  schema:
+                     $ref: "#/components/schemas/sleeptrackdetails"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
+   "/sleeptrackdetails/{id}":
+   "/sleeptrackdetails":
+   "/sleeptrackdetails":
+   "/sleeptrackdetails/{id}":
+         tags:
+      get:
+         tags:
+         -  sleeptrackdetails
+         description: GpGetNounById
+         parameters:
+         -  in: "path"
+            description: GpGetNounById
+            name: id
+            required: true
+            schema:
+               type: "string"
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
+   "/sleeptrackdetails/get/search":
+         tags:
+   "/sleeptrackdetails/get/update":
+         tags:
+   "/sleeptrackdetails":
+         tags:
+      get:
+         tags:
+         -  sleeptrackdetails
+         description: GpGetAllValues
+         responses:
+            200:
+               description: Success
+            400:
+               description: Bad Request
+            404:
+               description: Not Found
+            500:
+               description: Internal Server Error
       post:
          tags:
          -  sleeptrackdetails
@@ -144,6 +278,12 @@ paths:
                description: Internal Server Error
 components:
    schemas:
+      sleeptrackdetails:
+         type: object
+         properties:
+            sleeptrack_night:
+               type: "string"
+               description: Description
       sleeptrackdetails:
          type: object
          properties:
